--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.22.5",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
