--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "antd": "^5.22.5",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
