--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@supabase/supabase-js": "^2.47.10",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
@@ -18,6 +20,7 @@
     "firebase": "^11.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
+    "next": "^15.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
