--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,13 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "next": "^15.1.5",
+    "stripe": "^17.5.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
